BJS2-88208 Потренируем StreamAPI 3: task 1